--- a/.gitmodules
+++ b/.gitmodules
@@ -1,18 +1,18 @@
-[submodule "cf/lib/forge-std"]
-	path = cf/lib/forge-std
-	url = https://github.com/foundry-rs/forge-std
-[submodule "cf/lib/openzeppelin-contracts"]
-	path = cf/lib/openzeppelin-contracts
-	url = https://github.com/openzeppelin/openzeppelin-contracts
-[submodule "cf/lib/openzeppelin-contracts-upgradeable"]
-	path = cf/lib/openzeppelin-contracts-upgradeable
-	url = https://github.com/openzeppelin/openzeppelin-contracts-upgradeable
-[submodule "snake/lib/forge-std"]
-	path = snake/lib/forge-std
-	url = https://github.com/foundry-rs/forge-std
-[submodule "snake/lib/openzeppelin-contracts"]
-	path = snake/lib/openzeppelin-contracts
-	url = https://github.com/openzeppelin/openzeppelin-contracts
-[submodule "snake/lib/openzeppelin-contracts-upgradeable"]
-	path = snake/lib/openzeppelin-contracts-upgradeable
-	url = https://github.com/openzeppelin/openzeppelin-contracts-upgradeable
+# [submodule "cf/lib/forge-std"]
+# 	path = cf/lib/forge-std
+# 	url = https://github.com/foundry-rs/forge-std
+# [submodule "cf/lib/openzeppelin-contracts"]
+# 	path = cf/lib/openzeppelin-contracts
+# 	url = https://github.com/openzeppelin/openzeppelin-contracts
+# [submodule "cf/lib/openzeppelin-contracts-upgradeable"]
+# 	path = cf/lib/openzeppelin-contracts-upgradeable
+# 	url = https://github.com/openzeppelin/openzeppelin-contracts-upgradeable
+# [submodule "snake/lib/forge-std"]
+# 	path = snake/lib/forge-std
+# 	url = https://github.com/foundry-rs/forge-std
+# [submodule "snake/lib/openzeppelin-contracts"]
+# 	path = snake/lib/openzeppelin-contracts
+# 	url = https://github.com/openzeppelin/openzeppelin-contracts
+# [submodule "snake/lib/openzeppelin-contracts-upgradeable"]
+# 	path = snake/lib/openzeppelin-contracts-upgradeable
+# 	url = https://github.com/openzeppelin/openzeppelin-contracts-upgradeable
