--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,15 @@
 # [submodule "snake/lib/openzeppelin-contracts-upgradeable"]
 # 	path = snake/lib/openzeppelin-contracts-upgradeable
 # 	url = https://github.com/openzeppelin/openzeppelin-contracts-upgradeable
+[submodule "lib/forge-std"]
+	path = lib/forge-std
+	url = https://github.com/foundry-rs/forge-std
+[submodule "lib/openzeppelin-contracts"]
+	path = lib/openzeppelin-contracts
+	url = https://github.com/openzeppelin/openzeppelin-contracts
+[submodule "token/lib/forge-std"]
+	path = token/lib/forge-std
+	url = https://github.com/foundry-rs/forge-std
+[submodule "token/lib/openzeppelin-contracts"]
+	path = token/lib/openzeppelin-contracts
+	url = https://github.com/openzeppelin/openzeppelin-contracts
