--- a/.gitmodules
+++ b/.gitmodules
@@ -28,3 +28,12 @@
 [submodule "token/lib/openzeppelin-contracts"]
 	path = token/lib/openzeppelin-contracts
 	url = https://github.com/openzeppelin/openzeppelin-contracts
+[submodule "cf/lib/forge-std"]
+	path = cf/lib/forge-std
+	url = https://github.com/foundry-rs/forge-std
+[submodule "cf/lib/openzeppelin-contracts"]
+	path = cf/lib/openzeppelin-contracts
+	url = https://github.com/openzeppelin/openzeppelin-contracts
+[submodule "cf/lib/openzeppelin-contracts-upgradeable"]
+	path = cf/lib/openzeppelin-contracts-upgradeable
+	url = https://github.com/openzeppelin/openzeppelin-contracts-upgradeable
