--- a/.gitmodules
+++ b/.gitmodules
@@ -37,3 +37,6 @@
 [submodule "cf/lib/openzeppelin-contracts-upgradeable"]
 	path = cf/lib/openzeppelin-contracts-upgradeable
 	url = https://github.com/openzeppelin/openzeppelin-contracts-upgradeable
+[submodule "RaiseFunds/lib/openzeppelin-contracts-upgradeable"]
+	path = RaiseFunds/lib/openzeppelin-contracts-upgradeable
+	url = https://github.com/OpenZeppelin/openzeppelin-contracts-upgradeable
