--- a/RaiseFunds/.env
+++ b/RaiseFunds/.env
@@ -1,1 +1,2 @@
-rpc_url="https://bsc-dataseed1.defibit.io"
+RPC_URL=https://bsc-dataseed1.defibit.io
+BSCSCAN_API_KEY=AZKEFB6WTYWWZ4987AJ6QWFS6MHC9SUZ9R
