--- a/.gitmodules
+++ b/.gitmodules
@@ -40,3 +40,12 @@
 [submodule "RaiseFunds/lib/openzeppelin-contracts-upgradeable"]
 	path = RaiseFunds/lib/openzeppelin-contracts-upgradeable
 	url = https://github.com/OpenZeppelin/openzeppelin-contracts-upgradeable
+[submodule "Ani/lib/forge-std"]
+	path = Ani/lib/forge-std
+	url = https://github.com/foundry-rs/forge-std
+[submodule "Ani/lib/openzeppelin-contracts"]
+	path = Ani/lib/openzeppelin-contracts
+	url = https://github.com/openzeppelin/openzeppelin-contracts
+[submodule "Ani/lib/openzeppelin-contracts-upgradeable"]
+	path = Ani/lib/openzeppelin-contracts-upgradeable
+	url = https://github.com/openzeppelin/openzeppelin-contracts-upgradeable
